# dots

./: .gitconfig  .gitignore  .hyper.js  .taskrc  .tmux.conf  .vimrc  .zshrc  Makefile  alacritty.yml  aliases  brewlist  exports  links  mk  wiki
.emacs.d/: init.el
.flox/: env.json
.flox/env/: manifest.toml
.i3/: config
.newsboat/: .newsboat  config  history.search  urls
arxiv/: Makefile  pyproject.toml  setup.py
arxiv/arxiv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bat/.config/bat/: config
emacs/profiles/: load.29.elc  load.el
etc/: emacs-vterm-zsh.sh
fontconfig/.config/fontconfig/: fonts.conf
foot/.config/foot/: foot.ini
greetd/etc/greetd/: config.toml
hypr/.config/hypr/: hyprland.conf  hyprpaper.conf
lf/.config/lf/: lfrc
mpd/.config/mpd/: database  mpd.conf
ncmpcpp/.config/ncmpcpp/: config
newsboat/.config/newsboat/: config  urls
nvim/.config/nvim/: init.lua  lazy-lock.json  lazyvim.json
nvim/.config/nvim/lua/custom/plugins/: supermaven.lua
nvim/.config/nvim/lua/graphite/: init.lua
nvim/.config/nvim/lua/plugins/: cody.lua  colorschemes.lua  debug.lua  dingllm.lua  git.lua  gitsigns.lua  graphite.lua  llm.lua  lsp.lua  neorg.lua  octo.lua  rust.lua  supermaven.lua  telescope.lua  tests.lua  which-key.lua
oh-my-posh/: .oh-my-posh-theme.json
packages-list/: pacman.txt  paru.txt  yay.txt
ranger/.config/ranger/: rifle.conf
rmpc/.config/rmpc/: config.ron
tmux/: .tmux.conf
tmux/.config/tmux/: tmux.conf  tmux.reset.conf
waybar/.config/waybar/: config  style.css
zsh/: .zshrc
