[tool.poetry]
name = "arxiv"
version = "0.1.0"
description = ""
authors = ["chrisaddy <chris.william.addy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
typer = "^0.3.2"
bs4 = "^0.0.1"
lxml = "^4.5.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
typer-cli = "^0.0.11"
dephell = "^0.8.3"
dephell-setuptools = "^0.2.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
arxiv = "arxiv.cli:app"
